# ComfyUI-Floyo-Flux2-API-node

./: README.md  __init__.py  config.ini  flux2_config.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
custom_nodes/floyo_flux2_api_node/: __init__.py  config.ini  flux2_node.py
example-workflows/: Flux-2-Pro-Image-Edit.json  Flux-2-Pro-Text-To-Image.json
nodes/: flux2_config.py  flux2_flex_node.py  flux2_node.py  flux2_utils.py
